[gd_scene load_steps=16 format=3 uid="uid://bywje4k1odhra"]

[ext_resource type="Script" uid="uid://16jtyj104vec" path="res://Scripts/startscreen.gd" id="1_ghw46"]
[ext_resource type="Texture2D" uid="uid://1sjpaq4gkhru" path="res://Assets/Tv.png" id="2_df05h"]
[ext_resource type="Texture2D" uid="uid://b7ntks8fosdbl" path="res://Assets/TvMenus.png" id="3_8um5k"]
[ext_resource type="Texture2D" uid="uid://wrdhebwoeq36" path="res://Assets/remote.png" id="4_xim88"]
[ext_resource type="Texture2D" uid="uid://baabv4kacd6bx" path="res://Assets/lrudbutton.png" id="5_xim88"]
[ext_resource type="Texture2D" uid="uid://bw4grjepbmi0x" path="res://Assets/confirm.png" id="6_koqhg"]
[ext_resource type="Texture2D" uid="uid://c5gqx00v0riuv" path="res://Assets/PowerButton.png" id="7_cmrfp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_koqhg"]
atlas = ExtResource("3_8um5k")
region = Rect2(0, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmrfp"]
atlas = ExtResource("3_8um5k")
region = Rect2(40, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_loo7a"]
atlas = ExtResource("3_8um5k")
region = Rect2(80, 0, 40, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_if7li"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_koqhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmrfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loo7a")
}],
"loop": false,
"name": &"MenuStartup",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_if7li"]
atlas = ExtResource("5_xim88")

[sub_resource type="AtlasTexture" id="AtlasTexture_rrcx7"]
atlas = ExtResource("6_koqhg")

[sub_resource type="AtlasTexture" id="AtlasTexture_fh7cp"]
atlas = ExtResource("7_cmrfp")

[sub_resource type="LabelSettings" id="LabelSettings_xim88"]
font_color = Color(0, 0.61060935, 0, 1)

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghw46")

[node name="Tv" type="Sprite2D" parent="."]
position = Vector2(592, 363)
scale = Vector2(32, 32)
texture = ExtResource("2_df05h")

[node name="Screen" type="AnimatedSprite2D" parent="."]
position = Vector2(639, 363)
scale = Vector2(12, 12)
sprite_frames = SubResource("SpriteFrames_if7li")
animation = &"MenuStartup"
frame = 2
frame_progress = 1.0

[node name="Remote" type="Sprite2D" parent="."]
position = Vector2(1000, 639.00006)
scale = Vector2(10, 10)
texture = ExtResource("4_xim88")

[node name="Up_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 970.0
offset_top = 469.0
offset_right = 976.0
offset_bottom = 472.0
scale = Vector2(10, 10)
texture_normal = SubResource("AtlasTexture_if7li")
stretch_mode = 0

[node name="Down_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 970.0
offset_top = 579.0
offset_right = 976.0
offset_bottom = 582.0
scale = Vector2(10, 10)
texture_normal = SubResource("AtlasTexture_if7li")
stretch_mode = 0
flip_v = true

[node name="Left_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 509.0001
offset_right = 966.0
offset_bottom = 512.0001
rotation = 1.5707964
scale = Vector2(10, 10)
texture_normal = SubResource("AtlasTexture_if7li")
stretch_mode = 0
flip_v = true

[node name="Right_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1070.0001
offset_top = 509.00003
offset_right = 1076.0001
offset_bottom = 512.0001
rotation = 1.5707964
scale = Vector2(10, 10)
texture_normal = SubResource("AtlasTexture_if7li")
stretch_mode = 0

[node name="Confirm_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 969.9999
offset_top = 508.99994
offset_right = 975.9999
offset_bottom = 515.0
scale = Vector2(10, 10)
texture_normal = SubResource("AtlasTexture_rrcx7")

[node name="Power_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 909.99994
offset_top = 439.0
offset_right = 915.99994
offset_bottom = 445.0
scale = Vector2(10, 10)
texture_normal = SubResource("AtlasTexture_fh7cp")
stretch_mode = 0
flip_h = true

[node name="Singleplayer" type="Label" parent="."]
layout_mode = 0
offset_left = 717.0
offset_top = 240.0
offset_right = 814.0
offset_bottom = 265.0
text = "Singleplayer"
label_settings = SubResource("LabelSettings_xim88")

[node name="Multiplayer" type="Label" parent="."]
layout_mode = 0
offset_left = 722.0
offset_top = 270.0
offset_right = 819.0
offset_bottom = 295.0
text = "Multiplayer"
label_settings = SubResource("LabelSettings_xim88")

[node name="Options_Credits" type="Label" parent="."]
layout_mode = 0
offset_left = 689.0
offset_top = 300.0
offset_right = 812.0
offset_bottom = 325.0
text = "Options/Credits"
label_settings = SubResource("LabelSettings_xim88")

[node name="Quit" type="Label" parent="."]
layout_mode = 0
offset_left = 728.0
offset_top = 330.0
offset_right = 851.0
offset_bottom = 355.0
text = "Quit Game"
label_settings = SubResource("LabelSettings_xim88")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 335)

[connection signal="pressed" from="Up_Button" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="Down_Button" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="Left_Button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Right_Button" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Confirm_Button" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Power_Button" to="." method="_on_power_button_pressed"]
